--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "node-sass": "^3.13.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
+    "ts-loader": "^1.3.2",
+    "typescript": "^2.1.4",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2",
